--- a/index.html
+++ b/index.html
@@ -1158,7 +1158,7 @@ no peso que gostaria?</h2>		</div>
 				<div class="elementor-element elementor-element-5f31fdfa elementor-align-center elementor-widget elementor-widget-button" data-id="5f31fdfa" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://ev.braip.com/checkout/pla5oj1g/che39v6x?split=12" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://ev.braip.com/ref?pl=pla5oj1g&ck=che39v6x&af=afioo7e7?src=ck1_pote_vdreview" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-shopping-cart"></i>			</span>
