--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@ no peso que gostaria?</h2>		</div>
 				<div class="elementor-element elementor-element-2b8c8952 elementor-align-center elementor-widget elementor-widget-button" data-id="2b8c8952" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://ev.braip.com/checkout/pla52nk0/che39v6x?split=12" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://ev.braip.com/ref?pl=pla52nk0&ck=che39v6x&af=afioo7e7?src=ck2_pote_vdreview" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-shopping-cart"></i>			</span>
@@ -1251,7 +1251,7 @@ no peso que gostaria?</h2>		</div>
 				<div class="elementor-element elementor-element-463a65ab elementor-align-center elementor-widget elementor-widget-button" data-id="463a65ab" data-element_type="widget" data-widget_type="button.default">
 				<div class="elementor-widget-container">
 					<div class="elementor-button-wrapper">
-			<a href="https://ev.braip.com/checkout/pla7xwy0/che39v6x?split=12" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
+			<a href="https://ev.braip.com/ref?pl=pla7xwy0&ck=che39v6x&af=afioo7e7?src=ck4_pote_vdreview" target="_blank" class="elementor-button-link elementor-button elementor-size-md" role="button">
 						<span class="elementor-button-content-wrapper">
 						<span class="elementor-button-icon elementor-align-icon-left">
 				<i aria-hidden="true" class="fas fa-shopping-cart"></i>			</span>
